# etc

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: linting.yml  smoke-test.yml  testing-and-coverage.yml
docs/: conf.py  index.rst
etc/: config.py  etc.py  models.py  utils.py
etc/data/: Ali_1m_QHY6060.toml  ESO_2m2_WFI.toml  FTN_CometCam.toml  FTN_CometCam_V2_E2V_2k.toml  FTN_CometCam_V2_Marana.toml  FTN_CometCam_V2_QHY.toml  FTN_FLOYDS.toml  FTN_MuSCAT3.toml  FTN_SOPHIA-UV.toml  Gemini_GN_GMOS.toml  Hall1.1m_NASA42.toml  LCO_0m35_QHY600.toml  LCO_1m_COSMOS66.toml  LCO_1m_FLI.toml  LCO_1m_Sinistro.toml  LSST_VRO.toml  PTR_0m6_FLI-DC23042.toml  PTR_0m6_QHY990.toml  WHT_PFIP.toml
etc/data/comp/eso/: skytable_LaSilla_z1.1_pwv5.0_full_moon_dl0.1.fits  skytable_LaSilla_z1.2_pwv3.5_FLI0.011_300-2500_dl0.1.fits  skytable_LaSilla_z1.34_pwv3.5_FLI0.114_dl0.1.fits  skytable_LaSilla_z1.50_pwv3.5_FLI0.448_dl0.1.fits
etc/data/comp/gemini/: gmos_n_r_G0303.txt
etc/data/comp/lco/: Asahi_CN.csv  DM1_reflectance.csv  DM2_transmittance.csv  LCO_ADNP-BU-001.csv  LCO_ADNP-EP-001.txt  LCO_ADNP-IC-001.csv  LCO_ADNP-RS-001.csv  LCO_ESA_C3.csv  LCO_ESA_CR.csv  LCO_ESA_NH2.csv  LCO_ESA_OH.csv  SDSS.gp.txt  SDSS.up.txt
etc/data/spectra/: C_2014Q2_psg_rad.txt  psg_cfg.txt
etc/tests/: test_etc.py  test_models.py  test_utils.py
etc/tests/data/: test1.toml  test_skytable.fits  test_spectrum.fits
src/etc/: config.py  etc.py  models.py  utils.py
src/etc/data/: Ali_1m_QHY411.toml  Ali_1m_QHY6060.toml  ESO_2m2_WFI.toml  ESO_NTT_EFOSC2.toml  ESO_VLT_FORS2.toml  ESO_VLT_FORS2_Spectro.toml  ESO_VST_Omegacam.toml  FTN_CometCam.toml  FTN_CometCam_V2_QHY.toml  FTN_FLOYDS.toml  FTN_MuSCAT3.toml  FTN_SOPHIA-UV.toml  FTN_Spectral.toml  Gemini_GN_GMOS.toml  HST_ACS_WFC.toml  KPNO_0m9.toml  Keck_Keck2_NIRES.toml  Keck_LRIS.toml  LCO_1m_Andor.toml  LCO_1m_Sinistro.toml  LSST_VRO.toml  PTR_0m6_QHY600.toml  SOAR_Goodman.toml  SOAR_SOI.toml
src/etc/data/comp/: LBNL_4kx4kx10um_500um_CCD_qe.csv
src/etc/data/comp/atmos/: FTN_a12_pwv035.fits  (+1 more)
src/etc/data/spectra/: C_2014Q2_psg_rad_Jy.txt
tests/etc/: test_etc.py  test_models.py  test_utils.py
tests/etc/data/: test1.toml  test_ccd_qe.csv  test_multichannel.toml  test_optic_microns.csv  test_optic_nm.csv  test_skytable_v209.fits
(+23 files in other folders)
